improved simulated device cleaning
Signed-off-by: johannemitzcisco <jnemitz@cisco.com>

--- a/reset-device-config_4.5
+++ b/reset-device-config_4.5
@@ -1,6 +1,7 @@
 request devices device {DEVICE} sync-from
 config
-request devices device {DEVICE} delete-config
-request devices device {DEVICE} sync-to
+delete devices device {DEVICE} config
+set devices device {DEVICE} config ios:tailfned police cirmode
 commit
+request devices device {DEVICE} sync-to
 exit
